# dinov2-few-shot

./: .gitignore  README.md  pyproject.toml
notebooks/: cluster_photos.ipynb  few_shot_embeddings.ipynb
src/py/apps/image_classifier/: pyproject.toml
src/py/apps/image_classifier/image_classifier/: demo.py  embedding.py  encoder.py  svm.py
src/py/apps/mlserver_huggingface/: Containerfile  model-settings.json  settings.json
src/py/apps/photo_sampler/: Containerfile  README.md  demo.py  docker-compose.yml  pyproject.toml
src/py/apps/photo_sampler/mlserver_settings/: settings.json
src/py/apps/photo_sampler/models/dinov2/: model-settings.json
src/py/apps/photo_sampler/photo_sampler/: cluster.py  demo.py  model.py
src/py/apps/photo_sampler/server_configs/: config.json  config_local.json
src/py/libs/photo_encode/: encoder.py  llamaindex.py  utils.py
