[tool.poetry]
name = "photo-sampler"
version = "0.1.0"
description = "Server to sample photos."
authors = ["Jake Bauer <j.bauer@nazo.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.41.0"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
