[tool.poetry]
name = "photo_sampler"
version = "0.1.0"
description = "Server to sample photos."
authors = ["Jake Bauer <j.bauer@nazo.ai>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gradio = "^4.41.0"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
sqlalchemy = "^2.0.32"
numpy = "<1.26"
mlserver-huggingface = "^1.6.0"
tf-keras = "^2.17.0"
transformers = ">=4.30,<5.0"
mlserver = "^1.6.0"
torch = "^2.4.0"
pgvector = "^0.3.2"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
